2003-01-22  Mark Salter  <msalter@redhat.com>

	* src/diag/diag.c: Don't define DEFINE_VARS.
	* src/diag/pci_serv.c: Remove pci_int_handlers decl.
	* src/diag/iq80310.h: Remove cmd_stat declaration.
	* src/diag/flash.c: Declare cmd_stat.
	* include/plf_io.h: Remove unused duplicate code.
	(HAL_PCI_TRANSLATE_INTERRUPT): Fix typo.

2002-11-13  Mark Salter  <msalter@redhat.com>

	* misc/redboot_RAM.ecm: Remove CYGPKG_IO_SERIAL_ARM_XSCALE_IQ80310.
	* misc/redboot_RAMA.ecm: Ditto.
	* misc/redboot_ROM.ecm: Ditto
	* misc/redboot_ROMA.ecm: Ditto

	* cdl/hal_arm_xscale_iq80310.cdl (CYGBLD_INTEL_DIAGNOSTICS): Change
	default to 1.
	* include/hal_platform_setup.h: Use IOP310_EARLY_PCI_SETUP to make
	some BIOSes happy. BTB_INIT macro provided elsewhere.
	* src/diag/*: General cleanup to get rid of warnings and to eliminate
	functionality provided by the HAL. 

2002-11-12  Gary Thomas  <gary@mlbassoc.com>

	* src/diag/xscale_test.c: 
	* src/diag/test_menu.h: 
	* src/diag/test_menu.c: 
	* src/diag/pci_serv.c: 
	* src/diag/pci_bios.h: 
	* src/diag/memtest.c: 
	* src/diag/irq.S: 
	* src/diag/iq80310.h: 
	* src/diag/io_utils.c: 
	* src/diag/interrupts.c: 
	* src/diag/i557_eep.h: 
	* src/diag/i557_eep.c: 
	* src/diag/flash.c: 
	* src/diag/external_timer.c: 
	* src/diag/ether_test.h: 
	* src/diag/ether_test.c: 
	* src/diag/diag.c: 
	* src/diag/cycduart.h: 
	* src/diag/cycduart.c: 
	* src/diag/7_segment_displays.h: 
	* src/iq80310_misc.c: 
	* misc/redboot_ROMA.ecm: 
	* misc/redboot_ROM.ecm: 
	* misc/redboot_RAMA.ecm: 
	* misc/redboot_RAM.ecm: 
	* include/pkgconf/mlt_arm_xscale_iq80310_roma.mlt: 
	* include/pkgconf/mlt_arm_xscale_iq80310_roma.ldi: 
	* include/pkgconf/mlt_arm_xscale_iq80310_roma.h: 
	* include/pkgconf/mlt_arm_xscale_iq80310_rom.mlt: 
	* include/pkgconf/mlt_arm_xscale_iq80310_rom.ldi: 
	* include/pkgconf/mlt_arm_xscale_iq80310_rom.h: 
	* include/pkgconf/mlt_arm_xscale_iq80310_ram.mlt: 
	* include/pkgconf/mlt_arm_xscale_iq80310_ram.ldi: 