@@ -8,7 +8,7 @@ MEMORY
 {
     vecs : ORIGIN = 0, LENGTH = 0x1000
     rom : ORIGIN = 0x40000, LENGTH = 0x7c0000
-    ram : ORIGIN = 0xa0000000, LENGTH = 0x2000000
+    ram : ORIGIN = 0xa0000000, LENGTH = 0x20000000
 }
 
 SECTIONS
